# wsi_tissue_tiler

./: .gitignore  Dockerfile  README.md  TissueIdentifier.py  TissueIdentifierModel.py  docker-entrypoint.sh  extract_multiple_wsi.py  extract_one_wsi.py  main.py  pyproject.toml  requirements.txt  slide_processor.py
.ipynb_checkpoints/: extract_one_wsi-checkpoint.py  main-checkpoint.py  requirements-checkpoint.txt  slide_processor-checkpoint.py  slide_processor_parallel-checkpoint.py
wsi_tissue_tiler/: README.md  TissueIdentifier.py  main.py  requirements.txt  slide_processor.py  tissue_identifier.pth
wsi_tissue_tiler/clip_img_processor/: config.json
